swagger fix, better error handling
